# adrena-trading-arena

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  STRATEGY.md  bounty-analysis.md  bounty-original.md  package.json  pnpm-lock.yaml  tsconfig.json
app/: .env.example  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
app/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/src/hooks/: useAgent.ts  useCompetitions.ts  useLeaderboard.ts  useLiveUpdates.ts
app/src/lib/: api.ts  constants.ts  status-colors.ts  (+1 more)
docs/: arena-walkthrough.html  competition-design.md  deployment-guide.md  testing-results.md
docs/plans/: 2026-03-04-ai-trading-arena-design.md
orchestrator/: Cargo.toml
orchestrator/migrations/: V1__create_agents.sql  V2__create_competitions.sql  V3__create_enrollments.sql  V4__create_position_snapshots.sql  V5__create_trades.sql  V6__create_equity_snapshots.sql
orchestrator/src/: config.rs  error.rs  main.rs
orchestrator/src/api/: errors.rs  mod.rs  models.rs  state.rs
orchestrator/src/api/handlers/: agents.rs  competitions.rs  health.rs  live.rs  mod.rs
orchestrator/src/db/: agents.rs  competitions.rs  migrations.rs  mod.rs  pool.rs  positions.rs  trades.rs
orchestrator/src/grpc/: mod.rs  position_decoder.rs  subscriber.rs  ws_subscriber.rs
orchestrator/src/lifecycle/: state_machine.rs
orchestrator/src/scoring/: engine.rs  metrics.rs
programs/arena/: Cargo.toml
scripts/: devnet-e2e.ts
sdk/: package.json  pnpm-lock.yaml  tsconfig.json
sdk/src/: index.ts
tests/: arena.ts
(+81 files in other folders)
